gac_sb/objects/INNOvalo__c.object
<CustomObject>
    <fields>
        <fullName>Total_remboursementAvance_option1__c</fullName>
        <label>Total remboursements d&apos;avances option 1</label>
        <summarizedField>INNOsubvention__c.Montant_option1__c</summarizedField>
        <summaryFilterItems>
            <field>INNOsubvention__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Remboursements d&apos;avances</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOsubvention__c.Valorisation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_remboursementAvance_option2__c</fullName>
        <label>Total remboursements d&apos;avances option 2</label>
        <summarizedField>INNOsubvention__c.Montant_option2__c</summarizedField>
        <summaryFilterItems>
            <field>INNOsubvention__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Remboursements d&apos;avances</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOsubvention__c.Valorisation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_remboursementAvance_option3__c</fullName>
        <label>Total remboursements d&apos;avances option 3</label>
        <summarizedField>INNOsubvention__c.Montant_option3__c</summarizedField>
        <summaryFilterItems>
            <field>INNOsubvention__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Remboursements d&apos;avances</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOsubvention__c.Valorisation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_remboursementAvance_optionFinale__c</fullName>
        <formula>CASE(Option_retenue_remboursementAvance__c,1,Total_remboursementAvance_option1__c,2,Total_remboursementAvance_option2__c,3,Total_remboursementAvance_option3__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total remb. d&apos;avances option retenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_salarie_option1__c</fullName>
        <label>Total salariés option 1</label>
        <summarizedField>INNOdepensePersonnel__c.Montant_RD_retenu_option1__c</summarizedField>
        <summaryFilterItems>
            <field>INNOdepensePersonnel__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Salariés</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOdepensePersonnel__c.Valorisation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_salarie_option2__c</fullName>
        <label>Total salariés option 2</label>
        <summarizedField>INNOdepensePersonnel__c.Montant_RD_retenu_option2__c</summarizedField>
        <summaryFilterItems>
            <field>INNOdepensePersonnel__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Salariés</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOdepensePersonnel__c.Valorisation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_salarie_option3__c</fullName>
        <label>Total salariés option 3</label>
        <summarizedField>INNOdepensePersonnel__c.Montant_RD_retenu_option3__c</summarizedField>
        <summaryFilterItems>
            <field>INNOdepensePersonnel__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Salariés</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOdepensePersonnel__c.Valorisation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_salarie_optionFinale__c</fullName>
        <formula>CASE(Option_retenue_salarie__c,1,Total_salarie_option1__c,2,Total_salarie_option2__c,3,Total_salarie_option3__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total salariés option retenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_subvention_option1__c</fullName>
        <label>Total subventions option 1</label>
        <summarizedField>INNOsubvention__c.Montant_option1__c</summarizedField>
        <summaryFilterItems>
            <field>INNOsubvention__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Subventions</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOsubvention__c.Valorisation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_subvention_option2__c</fullName>
        <label>Total subventions option 2</label>
        <summarizedField>INNOsubvention__c.Montant_option2__c</summarizedField>
        <summaryFilterItems>
            <field>INNOsubvention__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Subventions</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOsubvention__c.Valorisation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_subvention_option3__c</fullName>
        <label>Total subventions option 3</label>
        <summarizedField>INNOsubvention__c.Montant_option3__c</summarizedField>
        <summaryFilterItems>
            <field>INNOsubvention__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Subventions</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOsubvention__c.Valorisation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_subvention_optionFinale__c</fullName>
        <formula>CASE(Option_retenue_subvention__c,1,Total_subvention_option1__c,2,Total_subvention_option2__c,3,Total_subvention_option3__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total subventions option retenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_veille_facture_option1__c</fullName>
        <label>Total veilles facture option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_veille_facture_option2__c</fullName>
        <label>Total veilles facture option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_veille_facture_option3__c</fullName>
        <label>Total veilles facture option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_veille_option1__c</fullName>
        <formula>MIN(60000, Total_veille_facture_option1__c + Total_veille_personnel_option1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total veilles option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_veille_option2__c</fullName>
        <formula>MIN(60000, Total_veille_facture_option2__c + Total_veille_personnel_option2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total veilles option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_veille_option3__c</fullName>
        <formula>MIN(60000, Total_veille_facture_option3__c + Total_veille_personnel_option3__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total veilles option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_veille_optionFinale__c</fullName>
        <formula>CASE(Option_retenue_veille__c,1,Total_veille_option1__c,2,Total_veille_option2__c,3,Total_veille_option3__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total veilles option retenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_veille_personnel_option1__c</fullName>
        <label>Total veilles personnel option 1</label>
        <summarizedField>INNOdepensePersonnel__c.Montant_veille_retenu_option1__c</summarizedField>
        <summaryForeignKey>INNOdepensePersonnel__c.Valorisation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_veille_personnel_option2__c</fullName>
        <label>Total veilles personnel option 2</label>
        <summarizedField>INNOdepensePersonnel__c.Montant_veille_retenu_option2__c</summarizedField>
        <summaryForeignKey>INNOdepensePersonnel__c.Valorisation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_veille_personnel_option3__c</fullName>
        <label>Total veilles personnel option 3</label>
        <summarizedField>INNOdepensePersonnel__c.Montant_veille_retenu_option3__c</summarizedField>
        <summaryForeignKey>INNOdepensePersonnel__c.Valorisation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type_CF__c</fullName>
        <label>Type CF</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CF</fullName>
                </value>
                <value>
                    <fullName>Demande renseignements</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UniteTempsDepensesPersonnel__c</fullName>
        <label>Unité de temps des dépenses de personnel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Heures</fullName>
                    <default>true</default>
                    <label>Heures</label>
                </value>
                <value>
                    <fullName>Jours</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ValoA0__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valo à 0</label>
        <type>Checkbox</type>
    </fields>
    <label>Valorisation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tout</label>
    </listViews>
    <nameField>
        <label>Nom de la valorisation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Valorisations</pluralLabel>
    <recordTypes>
        <fullName>CII</fullName>
        <active>true</active>
        <label>CII</label>
    </recordTypes>
    <recordTypes>
        <fullName>CIR</fullName>
        <active>true</active>
        <label>CIR</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>INNO_Date_deb_fin_agrement_saisissable</fullName>
        <active>true</active>
        <description>Vérifie que la date de début d&apos;agrément et que la date de fin d&apos;agrément ne sont pas remplis si la case Société agréé n&apos;est pas coché</description>
        <errorConditionFormula>!Societe_agreee__c &amp;&amp; ( !ISNULL( Date_debut_agrement__c ) || !ISNULL( Date_fin_agrement__c ) )</errorConditionFormula>
        <errorMessage>Vous ne pouvez pas saisir de date de début/fin d&apos;agrément si la société n&apos;est pas agréée</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>INNO_Date_relle_cloture</fullName>
        <active>true</active>
        <description>La date réelle de clôture mission ne peut pas être supérieure à aujourd’hui.</description>
        <errorConditionFormula>ISCHANGED(Date_echeance_DT__c ) &amp;&amp; Date_echeance_DT__c &gt; TODAY() &amp;&amp; RecordType.DeveloperName != &apos;CIR&apos; &amp;&amp; RecordType.DeveloperName != &apos;CII&apos;</errorConditionFormula>
        <errorMessage>La date réelle de clôture mission ne peut pas être supérieure à aujourd’hui.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>INNO_Date_rendu_DT</fullName>
        <active>true</active>
        <description>La date de rendu DT ne peut pas être supérieure à aujourd’hui.</description>
        <errorConditionFormula>ISCHANGED(Date_rendu_DT__c ) &amp;&amp; Date_rendu_DT__c &gt; TODAY()</errorConditionFormula>
        <errorMessage>La date de rendu DT ne peut pas être supérieure à aujourd’hui.</errorMessage>
    </validationRules>
</CustomObject>